tasksviewmodelfactory was added, database creating was added in tasksfragment, variable was added in fragment_tasks

--- a/app/src/main/res/layout/fragment_tasks.xml
+++ b/app/src/main/res/layout/fragment_tasks.xml
@@ -5,7 +5,9 @@
     tools:context=".TasksFragment">
 
     <data>
-
+        <variable
+            name="viewModel"
+            type="bes.max.tasks.TasksViewModel"/>
     </data>
 
     <LinearLayout
