recyclerviewadapter was added

--- a/app/src/main/res/layout/fragment_tasks.xml
+++ b/app/src/main/res/layout/fragment_tasks.xml
@@ -21,6 +21,7 @@
             android:layout_height="wrap_content"
             android:inputType="text"
             android:hint="Enter a task name"
+            android:text="@={viewModel.newTaskName}"
         />
 
         <Button
@@ -28,12 +29,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="Save Task" />
+            android:text="Save Task"
+            android:onClick="@{() -> viewModel.addTask()}" />
 
         <TextView
             android:id="@+id/tasks"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:text="@{viewModel.tasksString}"
             />
 
     </LinearLayout>
