--- a/app/src/main/res/layout/fragment_tasks.xml
+++ b/app/src/main/res/layout/fragment_tasks.xml
@@ -16,7 +16,8 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <EditText            android:id="@+id/task_name"
+        <EditText
+            android:id="@+id/task_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="text"
